# MarkovChains

./: CMakeLists.txt  README.md  main.cpp  markov.cu  markov.cuh  tests.cpp
